--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,19 @@
     padding: 0;
     box-sizing: border-box;
     }
+
+.clearfix::after{
+    content: "";
+    display: table;
+    clear: both
+}  
 .conteiner{
-    padding: 0 20rem;
-    margin: 3rem auto;
+    width: 60%;
+    margin: 0 auto;
 }
 
 header h1{
+    margin-top: 2rem;
     text-align: center;
     font-size: 2.5rem;
     color: #e53170;
@@ -16,7 +23,22 @@ header h1{
 }
 
 #top-p{
-    padding-top: 1rem;
+    padding-top: 2.5rem;
     text-align: center;
     font-size: 1.1rem;
+}
+
+figure img{
+    display: inline;
+    height: 5rem;
+}
+    
+
+.title{
+    width: 60%;
+    margin: 0 auto;  
+
+}
+figcaption{
+    padding-top: 0.3rem;
 }
